# lucid-umbrella

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Package.swift
.claude/: settings.json
.claude/commands/: check.md  review-module.md
.claude/skills/: rust-check.md
.claude/skills/check-descriptor/: REFERENCE.md  SKILL.md
.claude/skills/rust-quality/: EVALUATIONS.md  REFERENCE.md  SKILL.md
bindings/kotlin/uniffi/erc7730/: erc7730.kt
bindings/swift/: erc7730.swift  erc7730FFI.h  erc7730FFI.modulemap
crates/erc7730/: Cargo.toml  uniffi.toml
crates/erc7730/src/: address_book.rs  decoder.rs  eip712.rs  engine.rs  error.rs  lib.rs  resolver.rs  token.rs
crates/erc7730/src/types/: context.rs  descriptor.rs  display.rs  metadata.rs  mod.rs
crates/erc7730/src/uniffi_compat/: mod.rs
crates/erc7730/tests/: aave_integration.rs
scripts/: build-xcframework.sh  generate_uniffi_bindings.sh
wallet/: Config.xcconfig.template  README.md
wallet/Wallet/: ContentView.swift  Info.plist  Wallet.entitlements  WalletViewModel.swift
wallet/Wallet.xcodeproj/: project.pbxproj
wallet/Wallet.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
wallet/Wallet.xcodeproj/xcshareddata/xcschemes/: Wallet.xcscheme
wallet/Wallet.xcodeproj/xcuserdata/bartoszrozwarski.xcuserdatad/xcschemes/: xcschememanagement.plist
wallet/Wallet/Services/: ClearSigningService.swift  KeyManager.swift  WalletConnectService.swift
wallet/Wallet/Views/: DisplayModelView.swift  KeyImportSection.swift  QRScannerSheet.swift  SessionProposalSheet.swift  SessionRequestSheet.swift
(+1 files in other folders)
