[package]
name = "erc7730"
version = "0.1.0"
edition = "2021"
description = "ERC-7730 v2 clear signing library"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
num-bigint = { version = "0.4", features = ["serde"] }
tiny-keccak = { version = "2", features = ["keccak"] }
hex = "0.4"
time = { version = "0.3", features = ["formatting", "macros"] }
thiserror = "2"
